// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Statistic rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-statistic ezd-statistic-rtl"
>
  <div
    class="ezd-statistic-content"
  >
    <span
      class="ezd-statistic-content-value"
    >
      <span
        class="ezd-statistic-content-value-int"
      >
        0
      </span>
    </span>
  </div>
</div>
`;

exports[`Statistic support negetive number 1`] = `
<div
  class="ezd-statistic"
>
  <div
    class="ezd-statistic-title"
  >
    Account Balance (CNY)
  </div>
  <div
    class="ezd-statistic-content"
  >
    <span
      class="ezd-statistic-content-value"
    >
      <span
        class="ezd-statistic-content-value-int"
      >
        -112,893
      </span>
      <span
        class="ezd-statistic-content-value-decimal"
      >
        .12
      </span>
    </span>
  </div>
</div>
`;
